--- a/templates/base/sidebars/staff_sidebar.html
+++ b/templates/base/sidebars/staff_sidebar.html
@@ -1,282 +1,149 @@
 {% load static %}
-<!-- ======= Sidebar ======= -->
-<aside id="sidebar" class="sidebar">
+<!-- ======= Coca-Cola Staff Sidebar ======= -->
+<aside id="sidebar" class="sidebar" style="border-right: 2px solid #f40009;">
+    <div class="sidebar-brand text-center py-3">
+        <img src="{% static 'images/coca-cola-logo-small.png' %}" alt="Coca-Cola" style="height: 35px;">
+        <h6 class="mt-2" style="color: #f40009; font-size: 0.8rem;">STAFF PORTAL</h6>
+    </div>
 
     <ul class="sidebar-nav" id="sidebar-nav">
 
-      <li class="nav-item">
-        <a class="nav-link " href="#">
-          <i class="bi bi-grid"></i>
-          <span>Dashboard</span>
-        </a>
-      </li><!-- End Dashboard Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#staff-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-people"></i><span>Staff</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="staff-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-          
-          <!-- Doctors Sub-List -->
-          <li>
-            <a class="nav-link collapsed" data-bs-target="#doctors-subnav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-person-badge"></i><span>Teachers</span><i class="bi bi-chevron-down ms-auto"></i>
+        <!-- Staff Dashboard -->
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <i class="bi bi-house-door" style="color: #f40009;"></i>
+                <span>My Workspace</span>
             </a>
-            <ul id="doctors-subnav" class="nav-content collapse">
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Teachers List</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Add Teachers</span>
-                </a>
-              </li>
+        </li>
+
+        <!-- Daily Tasks -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#tasks-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-list-check" style="color: #f40009;"></i>
+                <span>My Tasks</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="tasks-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                <li><a href="#"><i class="bi bi-check-circle"></i> Today's Assignments</a></li>
+                <li><a href="#"><i class="bi bi-arrow-repeat"></i> Recurring Tasks</a></li>
+                <li><a href="#"><i class="bi bi-flag"></i> Priority Items</a></li>
+                <li><a href="#"><i class="bi bi-check2-all"></i> Task Completion</a></li>
             </ul>
-          </li>
-          
-          <!-- Interns Sub-List -->
-          <li>
-            <a class="nav-link collapsed" data-bs-target="#interns-subnav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-person-lines-fill"></i><span>Staff</span><i class="bi bi-chevron-down ms-auto"></i>
+        </li>
+
+        <!-- Time & Attendance -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#time-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-clock-history" style="color: #f40009;"></i>
+                <span>Time Tracking</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="interns-subnav" class="nav-content collapse">
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Staff List</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Add Staff</span>
-                </a>
-              </li>
+            <ul id="time-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                <li><a href="#"><i class="bi bi-qr-code"></i> Clock In/Out</a></li>
+                <li><a href="#"><i class="bi bi-calendar2-week"></i> Schedule</a></li>
+                <li><a href="#"><i class="bi bi-hourglass-top"></i> Break Logs</a></li>
+                <li><a href="#"><i class="bi bi-file-earmark-text"></i> Timesheets</a></li>
             </ul>
-          </li>
-          <!--staffs -->
+        </li>
 
-          <li>
-            <a class="nav-link collapsed" data-bs-target="#staff-subnav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-person-x"></i><span>Non Staff</span><i class="bi bi-chevron-down ms-auto"></i>
+        <!-- Production -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#production-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-cup-straw" style="color: #f40009;"></i>
+                <span>Production</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="staff-subnav" class="nav-content collapse">
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Non-Staff List</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Add Non-staff</span>
-                </a>
-              </li>
+            <ul id="production-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                <li><a href="#"><i class="bi bi-clipboard-check"></i> Quality Checks</a></li>
+                <li><a href="#"><i class="bi bi-box-seam"></i> Material Requests</a></li>
+                <li><a href="#"><i class="bi bi-exclamation-triangle"></i> Report Issue</a></li>
+                <li><a href="#"><i class="bi bi-lightbulb"></i> Improvement Ideas</a></li>
             </ul>
-          </li>
-          
-          <!-- Non-Staff Sub-List -->
-          <li>
-            <a class="nav-link collapsed" data-bs-target="#nonstaff-subnav" data-bs-toggle="collapse" href="#">
-              <i class="bi bi-person-x"></i><span>Intern</span><i class="bi bi-chevron-down ms-auto"></i>
+        </li>
+
+        <!-- Resources -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#resources-nav" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-journal-bookmark" style="color: #f40009;"></i>
+                <span>Resources</span>
+                <i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="nonstaff-subnav" class="nav-content collapse">
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Interns</span>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <i class="bi bi-circle"></i><span>Add Intern</span>
-                </a>
-              </li>
+            <ul id="resources-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
+                <li><a href="#"><i class="bi bi-file-earmark-pdf"></i> SOP Manuals</a></li>
+                <li><a href="#"><i class="bi bi-film"></i> Training Videos</a></li>
+                <li><a href="#"><i class="bi bi-shield-check"></i> Safety Guides</a></li>
+                <li><a href="#"><i class="bi bi-telephone"></i> Emergency Contacts</a></li>
             </ul>
-          </li>
-        </ul>
-      </li><!-- End Staff Nav -->
-      
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-journal-text"></i><span>Student</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Student Records</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Search Student</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Add Student</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Forms Nav -->
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-layout-text-window-reverse"></i><span>Academic Management</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Streams</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Timetable</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Resources</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Assignments</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Tables Nav -->
+        <!-- Coca-Cola Connect -->
+        <li class="nav-heading" style="color: #f40009;">Coca-Cola Connect</li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-bar-chart"></i><span>Terms</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="charts-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Terms List</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Add Term</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Charts Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-gem"></i><span>Exams Records</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Student Ranking</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Form Ranking</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>stream performance</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>subject performance</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>CAT Records</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Add Marks</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bi bi-circle"></i><span>Reports</span>
-            </a>
-          </li>
-        </ul>
-      </li><!-- End Icons Nav -->
-
-      <li class="nav-heading">Pages</li>
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-person"></i>
-          <span>Profile</span>
-        </a>
-      </li><!-- End Profile Page Nav -->
-
-      <li class="nav-item">
-        <a class="nav-link collapsed" data-bs-target="#tb-nav" data-bs-toggle="collapse" href="#">
-          <i class="bi bi-people"></i><span>Analysis Section</span><i class="bi bi-chevron-down ms-auto"></i>
-        </a>
-        <ul id="tb-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
-          <li class="nav-item">
+        <li class="nav-item">
             <a class="nav-link collapsed" href="#">
-              <i class="bi bi-card-list"></i>
-              <span>Population Graphs</span>
+                <i class="bi bi-chat-left-text" style="color: #f40009;"></i>
+                <span>Staff Announcements</span>
+                <span class="badge bg-danger float-end">2</span>
             </a>
-          </li>
-          <li class="nav-item">
+        </li>
+
+        <li class="nav-item">
             <a class="nav-link collapsed" href="#">
-              <i class="bi bi-card-list"></i>
-              <span>class-distribution</span>
+                <i class="bi bi-trophy" style="color: #f40009;"></i>
+                <span>Recognition Wall</span>
             </a>
-          </li>
-          <li class="nav-item">
+        </li>
+
+        <li class="nav-item">
             <a class="nav-link collapsed" href="#">
-              <i class="bi bi-card-list"></i>
-              <span>student results</span>
+                <i class="bi bi-people" style="color: #f40009;"></i>
+                <span>Team Directory</span>
             </a>
-          </li>
-        </ul>
-      </li><!-- End Staff Nav -->
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-card-list"></i>
-          <span>Search Student</span>
-        </a>
-      </li>
+        <!-- Personal -->
+        <li class="nav-heading">My Account</li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-card-list"></i>
-          <span>Register</span>
-        </a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#">
+                <i class="bi bi-person-circle"></i>
+                <span>Profile</span>
+            </a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-box-arrow-in-right"></i>
-          <span>Login</span>
-        </a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#">
+                <i class="bi bi-file-earmark-text"></i>
+                <span>Pay & Benefits</span>
+            </a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-dash-circle"></i>
-          <span>System Settings</span>
-        </a>
-      </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#">
+                <i class="bi bi-question-circle"></i>
+                <span>Help Center</span>
+            </a>
+        </li>
 
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#">
-          <i class="bi bi-file-earmark"></i>
-          <span>Help & Support</span>
-        </a>
-      </li><!-- End Blank Page Nav -->
+        <li class="nav-item">
+            <a class="nav-link collapsed" href="#">
+                <i class="bi bi-box-arrow-right"></i>
+                <span>Logout</span>
+            </a>
+        </li>
 
     </ul>
 
-</aside><!-- End Sidebar-->
+    <!-- Quick Actions -->
+    <div class="sidebar-footer p-2 text-center">
+        <div class="btn-group w-100">
+            <button class="btn btn-sm btn-outline-danger">
+                <i class="bi bi-exclamation-circle"></i> Report
+            </button>
+            <button class="btn btn-sm btn-outline-danger">
+                <i class="bi bi-question-circle"></i> Help
+            </button>
+        </div>
+        <small class="text-muted d-block mt-2">v2.4.1</small>
+    </div>
+</aside>
