--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -20,7 +20,7 @@
             </a>
             <ul id="hr-nav" class="nav-content collapse" data-bs-parent="#sidebar-nav">
                 <li><a href="{% url 'employee_list'%}"><i class="bi bi-person-vcard"></i> Employee Records</a></li>
-                <li><a href="#"><i class="bi bi-calendar-check"></i> Attendance</a></li>
+                <li><a href="{% url 'attendance_list'%}"><i class="bi bi-calendar-check"></i> Attendance</a></li>
                 <li><a href="#"><i class="bi bi-airplane"></i> Leave Management</a></li>
                 <li><a href="#"><i class="bi bi-cash-coin"></i> Payroll</a></li>
                 <li><a href="#"><i class="bi bi-award"></i> Performance Reviews</a></li>
