--- a/templates/base/sidebars/admin_sidebar.html
+++ b/templates/base/sidebars/admin_sidebar.html
@@ -22,7 +22,7 @@
                 <li><a href="{% url 'employee_list'%}"><i class="bi bi-person-vcard"></i> Employee Records</a></li>
                 <li><a href="{% url 'attendance_list'%}"><i class="bi bi-calendar-check"></i> Attendance</a></li>
                 <li><a href="{% url 'leave_list'%}"><i class="bi bi-airplane"></i> Leave Management</a></li>
-                <li><a href="#"><i class="bi bi-cash-coin"></i> Payroll</a></li>
+                <li><a href="{% url 'payroll_list'%}"><i class="bi bi-cash-coin"></i> Payroll</a></li>
                 <li><a href="#"><i class="bi bi-award"></i> Performance Reviews</a></li>
                 <li><a href="#"><i class="bi bi-building-gear"></i> Departments</a></li>
             </ul>
